--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jasmine": "^2.8.19",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.55",
+    "ajv": "^8.12.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
